--- a/gradle.properties
+++ b/gradle.properties
@@ -2,5 +2,6 @@ org.gradle.parallel=true
 org.gradle.caching=true
 kotlin.code.style=official
 android.useAndroidX=true
-version=1.23.3
+version=1.23.3.1
 ksp.useKSP2=true
+org.gradle.jvmargs=-Xmx4g -XX:MaxMetaspaceSize=512m
